manifests/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: go-app
    app: kubeapp
    env: canary
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-app
    spec:
      containers:
      - name: go-app
        image: docker.io/nokkie/go-app:canary
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  labels:
    app.kubernetes.io/name: go-app
spec:
  selector:
    app.kubernetes.io/name: go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: go-app
spec:
    rules:
    - host: rancher.lumicast.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            serviceName: go-app
            servicePort: 8080
